--- a/.github/workflows/Build-NEWiFi3-d2.yml
+++ b/.github/workflows/Build-NEWiFi3-d2.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: newifi3-d2
+name: Build OpenWRT NEWiFi3-d2
 
 on:
   repository_dispatch:
